# roboticsreachy-mini-neu

./: README.md
Router/: .env  README.md  pyproject.toml  功能及使用说明.md  隐私类型.html
Router/scripts/: augment_data.py  convert_20ng.py  convert_interaction_dialogue.py  convert_privacy_care.py  generate_train_dataset.py  llm_client.py  llm_label.py  review_labels.py  run_train.ps1  test_direct_output.py  test_model.py  train_lora.py
module-evaluation/: README.md
module-evaluation/ASR/: ASR模型选型分析.html  ASR评测指标汇总.html  ASR评测框架选型.html  RK3588_ASR方案对比.html  launch.example.json  功能及使用说明.md
module-evaluation/ASR/eval_jiwer/: compare_results.py  convert_xiaoya.py  jsonl_loader.py  pyproject.toml  run_eval.py  utils.py
module-evaluation/ASR/eval_jiwer/eval/: __init__.py
module-evaluation/ASR/eval_jiwer/vad/: __init__.py  segmenter.py
module-evaluation/LLM/: LLM评测工具对比.html  LLM评测维度.html  launch.example.json  功能及使用说明.md
module-evaluation/TTS/: TTS模型完整列表.html  TTS评测维度体系.html  launch.example.json  功能及使用说明.md
roboticsreachy-mini-chatbox-neusoft/: .env.example  .gitignore  AGENTS.md  cascade.yaml  hf_tree.json  launch.example.json  pyproject.toml  功能及使用说明.md
roboticsreachy-mini-chatbox-neusoft/analysis/: qwen-provider-dev-test-plan-20260501.md  reachy-mini-chatbox-ohos-porting-research-20260425.md  reachy-mini-chatbox-vs-reachy-mini-conversation-app-20260425.md
roboticsreachy-mini-chatbox-neusoft/docs/: WebSocket预连接优化变更汇总.md  WebSocket预连接优化设计.md  级联架构性能指标设计.md  级联模式架构设计.html  级联模式架构设计.md
机器人主动沟通方案/: 机器人主动沟通行为清单.html  机器人主动沟通行为清单.md
(+196 files in other folders)
