[project]
name = "basebert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "nltk>=3.9.1",
    "openai>=1.0.0",
    "peft>=0.19.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
name = "org"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
