[project]
name = "eval-jiwer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiomentations>=0.34",
    "jiwer>=3.0",
    "numpy>=1.24",
    "onnxruntime>=1.24",
    "psutil>=5.9",
    "huggingface-hub>=0.20",
    "sherpa-onnx==1.13.1",
    "soundfile>=0.12",
]
